<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".userInterface.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aggregationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_home_aggregate_button_label"
                app:icon="@android:drawable/ic_menu_sort_by_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/aggregationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_sorting_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/fieldToSortSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/sortingDirectionSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/fragment_home_filter_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/statusFilterSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="10dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_search_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/contactSearchField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:hint="@string/fragment_home_search_field_placeholder"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/fieldToSearchSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/applyAggregationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="#8BC34A"
                android:text="@string/fragment_home_apply_button_label" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contactsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>